working-assets/css/articles.css
.blog-main {
  border-top: 1px solid var(--c-light-grey);
  margin-top: 1em;
}

.article-grid--header {
  display: flex;
  justify-content: space-between;
  gap: 0.5rem;
  align-items: center;
  margin-top: 2em;

  & .h1,
  & a {
    margin: 2rem 0 1rem;
  }
}

.article-grid {
  gap: 1.2em .6em;
  padding-top: 1em;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
  height: 100%;
  overflow: auto;
}

.article-card {
  height: 100%;
  display: flex;
  flex-flow: column;
  border: 1px solid var(--c-light-grey);

  & p {
    padding: 0.2rem 0.65rem 0;
  }

  & h3 {
    padding: 0 0.65rem;
    font-size: var(--txt-h4);
    color: var(--c-dark-grey);
    margin: 0.5em 0 0;
    transition: color 0.15s ease;
    text-transform: none;

    &:hover {
      color: var(--c-grey);

    }
  }

  & img {
    height: 100%;
    scale: 1;
    filter: brightness(1);
    transition: scale 10s ease;
    object-fit: cover;
      object-position: center;
  }

  &:hover img {
    filter: brightness(1.1);
    scale: 1.2;
  }
}

.event-card {
  flex-direction: row;

  & .event-meta {
    margin: .25rem 0.65em
  }

  & .article-card--content {
    flex: 1 0 50%;
    margin-top: 2rem;
    min-width: 165px;
  }
}

.article-card--image {
  aspect-ratio: 16 / 9;
  overflow: hidden;
  min-height: 15rem;

  & .event-meta {
    position: absolute;
    top: 5%;
    right: 0;
    background: var(--c-white);
    padding: 0.4em 0.3em 0.3em;
  }

  & .event-date {
    top: calc(5% + 2.3em);
  }
}

.article-card--content {
  flex-grow: 1;
  position: relative;
  padding-bottom: 3em;

  & .read-more-link {
    width: 100%;
    justify-content: flex-end;
    position: absolute;
    bottom: 0;
    background: var(--c-off-white);
    padding: 0.5em;
  }
}

.article-hero {
  max-height: 40vh;
}

.article-wrapper {
  width: min(90vw, 80ch);
  margin: -5rem auto 0;
  background-color: var(--c-white);
  padding: 2rem min(5vw, 3rem);
  position: relative;
  z-index: 1;

  & h1 {
    margin-top: 0;
  }

  & p {
    margin-inline: auto;
  }
}

p.article-meta {
  margin-left: 0;
}

@media screen and (width > 600px) {
  .article-grid {
    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
  }
}

@media screen and (width > 1000px) {
  .article-grid {
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  }
}

/* GYMS ARTICLE PAGES */

.gyms-hero {
  height: 25rem;
  min-height: 60vh;
  overflow: hidden;
  padding-bottom: 5rem;
  position: relative;

  &>* {
    position: absolute;
    inset: 0;
  }

  & .title {
    display: flex;
    flex-direction: column;
    gap: 0;
    justify-content: center;
    padding: 0 0 5rem 0;

    & p {
      color: white;
      font-size: var(--txt-h4);
      text-align: left;
      margin: 0;
      text-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
    }
  }

  & h1 {
    color: white;
    position: relative;
    font-size: var(--txt-xxl);
    margin: 0;
    text-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
  }
}

.video-container {
  width: 100%;
  padding-bottom: 56.25%;
  position: relative;
  margin: 2rem 0;

  & iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.gyms-hero--image {
  filter: brightness(0.75);
  height: 100%;
}

.gym-logo {
  max-width: min(100px, 20vw);
  max-height: min(70px, 15vw);
  filter: contrast(0) brightness(5) saturate(0);
  object-fit: contain
}

.gyms-footer--image,
.gyms-footer--video {
  width: 100%;
  aspect-ratio: 16 / 9;
  object-fit: cover;
  margin-top: 4rem;
}

